# Kurs_project_3_cd-hh_vacancies_project

./: .flake8  .gitignore  README.md  api.py  database.py  db_manager.py  main.py  models.py  pyproject.toml  requirements.txt  run_tests.py  setup.py
src/: api.py  database.py  db_manager.py  main.py  models.py
tests/: __init__.py  conftest.py  test_api.py  test_db_manager.py  test_integration.py  test_models.py  test_pytest.py
